<resources>
    <string name="app_name">Firehouse Pet Shop App</string>
    <string name="add_reward">Add Reward</string>
    <string name="edit_item_s">Edit Item(s)</string>
    <string name="delete_item_s">Delete Item(s)</string>
    <string name="adjust_points">Adjust Points</string>
    <string name="administrator">Administrator</string>
    <string name="manage_rewards">Manage Rewards</string>
    <string name="view_help_requests">View Help Requests</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="username">UserName</string>
    <string name="welcome">Welcome</string>
    <string name="scan_qr">Scan QR</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="subject">Subject</string>
    <string name="select">Select</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="points">Points</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_create_help_request">Create Help Request</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions.
    </string>
    <string name="action_sign_out">Sign Out</string>

</resources>
